<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_status"
        android:title="@string/set_status"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_channel"
        android:title="@string/channel"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_page_toggle"
        android:title="@string/page_show_source"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_card_backlinks"
        android:title="@string/links_here"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_jump_top"
        android:title="@string/jump_top"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_jump_bottom"
        android:title="@string/jump_bottom"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_attachments"
        android:title="@string/files_on_card"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_mentions"
        android:title="@string/unlinked_mentions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_card_graph"
        android:title="@string/nearby_cards"
        app:showAsAction="never"/>
</menu>
